--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-merlot
 show_downloads: true
 title: Redisbox
-description: A SRedis GUI Client
+description: A Redis GUI Client
 github:
   zip_url: https://github.com/winterbang/redisbox/releases
   tar_url: https://github.com/winterbang/redisbox/releases
