--- a/package.json
+++ b/package.json
@@ -56,83 +56,86 @@
     }
   },
   "dependencies": {
-    "animate.css": "^3.7.0",
-    "axios": "^0.18.1",
-    "electron-tabs": "^0.9.5",
-    "iview": "^3.2.2",
+    "animate.css": "^4.1.1",
+    "ant-design-vue": "^1.7.2",
+    "axios": "^0.21.0",
+    "electron-tabs": "^0.15.0",
     "nedb": "^1.8.0",
-    "redis": "^2.8.0",
-    "vue": "^2.5.15",
+    "redis": "^3.0.2",
+    "vue": "^2.6.12",
     "vue-electron": "^1.0.6",
-    "vue-google-adsense": "^1.3.0",
-    "vue-router": "^3.0.1",
-    "vue-script2": "^2.0.3",
-    "vuex": "^3.0.1",
-    "vuex-electron": "^1.0.0"
+    "vue-google-adsense": "^1.9.0",
+    "vue-router": "^3.4.9",
+    "vue-script2": "^2.1.0",
+    "vuex": "^3.5.1",
+    "vuex-electron": "^1.0.3"
   },
   "devDependencies": {
-    "ajv": "^6.5.0",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "ajv": "^6.12.6",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-istanbul": "^4.1.6",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "babili-webpack-plugin": "^0.1.2",
-    "cfonts": "^2.1.2",
-    "chai": "^4.1.2",
-    "chalk": "^2.4.1",
-    "copy-webpack-plugin": "^4.5.1",
-    "cross-env": "^5.1.6",
-    "css-loader": "^0.28.11",
-    "del": "^3.0.0",
+    "cfonts": "^2.8.6",
+    "chai": "^4.2.0",
+    "chalk": "^4.1.0",
+    "copy-webpack-plugin": "^6.3.0",
+    "cross-env": "^7.0.2",
+    "css-loader": "^5.0.1",
+    "del": "^6.0.0",
     "devtron": "^1.4.0",
-    "electron": "^7.2.4",
-    "electron-builder": "^20.19.2",
-    "electron-debug": "^1.5.0",
-    "electron-devtools-installer": "^2.2.4",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^11.0.0",
+    "electron": "^10.1.5",
+    "electron-builder": "^22.9.1",
+    "electron-debug": "^3.1.0",
+    "electron-devtools-installer": "^3.1.1",
+    "eslint": "^7.13.0",
+    "eslint-config-standard": "^16.0.1",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-html": "^4.0.3",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-html": "^6.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.2",
+    "eslint-plugin-vue": "^7.1.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.0.0-alpha.13",
     "inject-loader": "^4.0.1",
-    "karma": "^2.0.2",
+    "karma": "^5.2.3",
     "karma-chai": "^0.1.0",
-    "karma-coverage": "^1.1.2",
-    "karma-electron": "^6.0.0",
-    "karma-mocha": "^1.3.0",
-    "karma-sourcemap-loader": "^0.3.7",
+    "karma-coverage": "^2.0.3",
+    "karma-electron": "^6.3.1",
+    "karma-mocha": "^2.0.1",
+    "karma-sourcemap-loader": "^0.3.8",
     "karma-spec-reporter": "^0.0.32",
-    "karma-webpack": "^3.0.0",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "0.4.0",
-    "mocha": "^5.2.0",
+    "karma-webpack": "^4.0.2",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
+    "mini-css-extract-plugin": "1.3.0",
+    "mocha": "^8.2.1",
     "multispinner": "^0.2.1",
-    "node-loader": "^0.6.0",
-    "node-sass": "^4.9.2",
-    "require-dir": "^1.0.0",
-    "sass-loader": "^7.0.3",
-    "spectron": "^3.8.0",
-    "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
+    "node-loader": "^1.0.2",
+    "node-sass": "^5.0.0",
+    "require-dir": "^1.2.0",
+    "sass-loader": "^10.0.5",
+    "spectron": "^12.0.0",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^15.2.4",
-    "vue-style-loader": "^4.1.0",
-    "vue-template-compiler": "^2.5.15",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-hot-middleware": "^2.22.2",
-    "webpack-merge": "^4.1.3"
+    "vue-loader": "^15.9.5",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^5.3.0"
   }
 }
