--- a/package.json
+++ b/package.json
@@ -4,22 +4,11 @@
   "author": "zwtao90@gmail.com",
   "description": "Redis 图形化客户端",
   "license": "MIT",
-  "main": "./dist/electron/main.js",
+  "main": "main.js",
   "scripts": {
-    "build": "node .electron-vue/build.js && electron-builder",
-    "build:dir": "node .electron-vue/build.js && electron-builder --dir",
-    "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
-    "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
-    "dev": "node .electron-vue/dev-runner.js",
-    "e2e": "npm run pack && mocha test/e2e",
-    "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter src test",
-    "lint:fix": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter --fix src test",
-    "pack": "npm run pack:main && npm run pack:renderer",
-    "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
-    "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-    "test": "npm run unit && npm run e2e",
-    "unit": "karma start test/unit/karma.conf.js",
-    "postinstall": "npm run lint:fix"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "build": {
     "productName": "redisbox",
@@ -56,86 +45,14 @@
     }
   },
   "dependencies": {
-    "animate.css": "^4.1.1",
-    "ant-design-vue": "^1.7.2",
-    "axios": "^0.21.0",
-    "electron-tabs": "^0.15.0",
-    "nedb": "^1.8.0",
-    "redis": "^3.0.2",
-    "vue": "^2.6.12",
-    "vue-electron": "^1.0.6",
-    "vue-google-adsense": "^1.9.0",
-    "vue-router": "^3.4.9",
-    "vue-script2": "^2.1.0",
-    "vuex": "^3.5.1",
-    "vuex-electron": "^1.0.3"
+    "electron": "^16.0.1",
+    "vue": "^3.2.22"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "ajv": "^6.12.6",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-istanbul": "^6.0.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "babili-webpack-plugin": "^0.1.2",
-    "cfonts": "^2.8.6",
-    "chai": "^4.2.0",
-    "chalk": "^4.1.0",
-    "copy-webpack-plugin": "^6.3.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^5.0.1",
-    "del": "^6.0.0",
-    "devtron": "^1.4.0",
-    "electron": "^10.1.5",
-    "electron-builder": "^22.9.1",
-    "electron-debug": "^3.1.0",
-    "electron-devtools-installer": "^3.1.1",
-    "eslint": "^7.13.0",
-    "eslint-config-standard": "^16.0.1",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-html": "^6.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.2",
-    "eslint-plugin-vue": "^7.1.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.0.0-alpha.13",
-    "inject-loader": "^4.0.1",
-    "karma": "^5.2.3",
-    "karma-chai": "^0.1.0",
-    "karma-coverage": "^2.0.3",
-    "karma-electron": "^6.3.1",
-    "karma-mocha": "^2.0.1",
-    "karma-sourcemap-loader": "^0.3.8",
-    "karma-spec-reporter": "^0.0.32",
-    "karma-webpack": "^4.0.2",
-    "less": "^3.12.2",
-    "less-loader": "^7.0.2",
-    "mini-css-extract-plugin": "1.3.0",
-    "mocha": "^8.2.1",
-    "multispinner": "^0.2.1",
-    "node-loader": "^1.0.2",
-    "node-sass": "^5.0.0",
-    "require-dir": "^1.2.0",
-    "sass-loader": "^10.0.5",
-    "spectron": "^12.0.0",
-    "style-loader": "^2.0.0",
-    "url-loader": "^4.1.1",
-    "vue-html-loader": "^1.2.4",
-    "vue-loader": "^15.9.5",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "^5.3.0"
+    "@vitejs/plugin-vue": "^1.10.0",
+    "chalk": "^4.1.2",
+    "electron": "^16.0.1",
+    "electron-debug": "^3.2.0",
+    "vite": "^2.6.14"
   }
 }
