--- a/package.json
+++ b/package.json
@@ -53,10 +53,11 @@
   "dependencies": {
     "electron": "^16.0.1",
     "electron-squirrel-startup": "^1.0.0",
-    "nedb": "^1.8.0",
+    "nedb-promises": "^5.0.3",
     "redis": "^4.0.1",
     "vue": "^3.2.22",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.61",
