--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     }
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "electron": "^16.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "nedb-promises": "^5.0.3",
